--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "autoprefixer": "^10.4.13",
     "nuxt": "^3.0.0",
     "postcss": "^8.4.21",
+    "sass": "^1.57.1",
+    "sass-loader": "^10.4.1",
     "tailwindcss": "^3.2.4"
   }
 }
