--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "sass": "^1.57.1",
     "sass-loader": "^10.4.1",
     "tailwindcss": "^3.2.4"
+  },
+  "dependencies": {
+    "@vercel/analytics": "^1.0.1"
   }
 }
