--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "nuxt": "^3.0.0",
+    "nuxt-gtag": "^1.1.2",
     "postcss": "^8.4.21",
     "sass": "^1.57.1",
     "sass-loader": "^10.4.1",
